Fixed address bug when exchanging BCH -> BTC. Many UI fixes. Uses temporary images for Sideshift banner.

--- a/src/sass/views/sideshift.scss
+++ b/src/sass/views/sideshift.scss
@@ -10,7 +10,7 @@
   .button-sideshift {
     @extend %button-standard;
 
-    @include button-style(#243F5D, #FFF, #606060, #FFF, #FFF);
+    @include button-style(#111111, #FFF, #606060, #FFF, #FFF);
     @include button-clear(#FFF);
     @include button-outline(#C1C1C1);
     border: 0px;
