--- a/www/css/bitcoin.com.css
+++ b/www/css/bitcoin.com.css
@@ -307,14 +307,14 @@ div.slide-success__background.fill-screen {
     background-size: contain;
 }
 
-.shapeshift-banner {
-	background: url(../img/shapeshiftbg.jpg) center center no-repeat #28394d;
+.sideshift-banner {
+	background: url(../img/sideshiftbg.jpg) center center no-repeat #28394d;
 	padding: 10px;
 	box-shadow: 0px 5px 10px 0px #cccccc;
 	height: 5em;
 }
 
-.shapeshift-logo {
+.sideshift-logo {
 	display: block;
 	float: left;
 	max-height: 100%;
